dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=viceversachaind.1
endif

if ENABLE_QT
  dist_man1_MANS+=viceversachain-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=viceversachain-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=viceversachain-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=viceversachain-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=viceversachain-wallet.1
endif
endif
